[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://SFX/whistle_slide_down_01.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/AudioStreamPlayer3D.gd" type="Script" id=3]
[ext_resource path="res://SFX/mud_splat_heavy_03.wav" type="AudioStream" id=4]
[ext_resource path="res://Scripts/AudioStreamPlayer3D2.gd" type="Script" id=5]
[ext_resource path="res://ParticleStuff/SmokeTrail.tscn" type="PackedScene" id=6]




[sub_resource type="SphereMesh" id=1]
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=2]
radius = 0.5

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.2, 0.2, 3 )

[node name="Projectile" type="RigidBody"]
collision_layer = 4
collision_mask = 27
continuous_cd = true
contacts_reported = 2
contact_monitor = true
script = ExtResource( 1 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 15.697
unit_size = 5.0
pitch_scale = 3.25
attenuation_filter_cutoff_hz = 2000.0
doppler_tracking = 2
script = ExtResource( 3 )

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 38.323
pitch_scale = 1.96
doppler_tracking = 2
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionTimer" type="Timer" parent="."]

[node name="SmokeTrail" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, -1 )
layers = 2
emitting = false
preprocess = 10.0
explosiveness = 0.1
draw_order = 1

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
[connection signal="body_shape_entered" from="." to="." method="_on_Projectile_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="body_shape_exited" from="Area" to="." method="_on_Area_body_shape_exited"]
